<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.honeywell.stevents.Activity_Main" >

    <TextView
        android:id="@+id/btnBarcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#76a3a3"
        android:gravity="left"
        android:padding="6dp"
        android:text="@string/txtMainTitle"
        android:textColor="#000000"
        android:textSize="13sp">

    </TextView>


    <LinearLayout
        android:layout_width="450dp"
        android:layout_height="683dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenblue1"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/textInfo"
            android:textColor="#000000"
            android:textSize="13sp">

        </TextView>

        <Button
            android:id="@+id/btnInputSEs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@color/greenblue1L"
            android:text="@string/btnInputSEs" />

        <Button
              android:id="@+id/btnEditSEs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@color/greenblue1L"
            android:text="@string/btnEditSEs" />

        <Button
            android:id="@+id/btnUploadSEs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@color/greenblue1L"
            android:text="@string/btnUploadSEs" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:max = "100"
            android:min = "1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtAppInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="#83acac"
            android:fontFamily="sans-serif-black"
            android:foregroundTintMode="add"
            android:gravity="center_vertical|center_horizontal"
            android:padding="8dip"
            android:text="TextView"
            android:textColor="#4A148C" />

    </LinearLayout>
    <ListView
        android:id="@+id/listViewBarcodeData"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"></ListView>
</RelativeLayout>
