<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.honeywell.stevents.Activity_SE_Main_Input"
    android:id="@+id/txt_Header"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tbl_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginBottom="8dp"
        android:background="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="right"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_Site_Event_Code"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/site_Event_Code"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/txt_Site_Event_Code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:gravity="center_vertical"
                android:scrollbarStyle="insideInset"
                android:spinnerMode="dropdown"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_Equipment_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:text="@string/Equipment_code"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/txt_equip_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dialog"
                tools:ignore="TouchTargetSizeCheck" />

        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_User_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="0"
                android:gravity="start|center_vertical"
                android:text="@string/User_name"
                android:textSize="16sp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/User_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_spinner_background"
                android:spinnerMode="dialog"
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp">


            <TextView
                android:id="@+id/lbl_Event_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/Event_date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_event_date"
                    android:layout_width="113dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/border"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:text="12/12/25"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/text_event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_weight="0"
                    android:autofillHints=""
                    android:background="@drawable/border"
                    android:selectAllOnFocus="true"
                    android:text="11:43 pm"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/myDatePickerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Date" />

            </LinearLayout>
            </TableRow>



        <TableRow
            android:id="@+id/row5"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_Resolved"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="Resolved"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_true"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="True"/>
                <RadioButton android:id="@+id/radio_false"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="False"/>
            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/row6"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_Resolved_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="Resolved Date"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_resolve_date"
                    android:layout_width="113dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/border"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:text="12/12/25"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/text_resolve_time"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_weight="0"
                    android:autofillHints=""
                    android:background="@drawable/border"
                    android:selectAllOnFocus="true"
                    android:text="11:43 pm"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/myDatePickerButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Date" />

            </LinearLayout>

        </TableRow>
        <TableRow
            android:id="@+id/row7"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/lbl_comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Comments"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_comment"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="0dp"
                android:layout_weight="2"
                android:autofillHints=""
                android:background="@drawable/border"
                android:textSize="16sp"
                android:selectAllOnFocus="true"
                android:textStyle="bold"
                android:hint=""
                tools:ignore="TouchTargetSizeCheck" />
        </TableRow>


        <TableRow
            android:id="@+id/rowButtons"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:minHeight="50dp">

            <Button
                android:id="@+id/btn_save"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_clear"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_delete"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_done"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/done"
                android:textStyle="bold" />
        </TableRow>

        <ListView
            android:id="@+id/listViewBarcodeData"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:textSize="25sp"></ListView>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>